<resources>
    <string name="app_name">GoogleBooksSearch</string>

    <!--<string name="youTube">somethin-AIzaSyBed2Mb3-dQRLppIlgt0Pr5O4otlBB6MB8</string>-->

    <string name="emptyStateDescription">List is Empty.</string>
    <string name="noQueriesText">Please select a query from the dropdown menu above to view a
        list of results.</string>

    <!--Spinner has pre-defined queries-->

    <string-array name="queryArray">
        <item>@string/firstQuery</item>
        <item>@string/secondQuery</item>
        <item>@string/thirdQuery</item>
        <item>@string/fourthQuery</item>
        <item>@string/fifthQuery</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Strings for the pre-defined queries-->
    <string name="firstQuery">Calculus</string>
    <string name="secondQuery">Corgis</string>
    <string name="thirdQuery">Kickboxing</string>
    <string name="fourthQuery">Music Theory</string>
    <string name="fifthQuery">Smartphones</string>

    <string name="loading">Loading. Please wait…</string>
    <string name="authorTextViewDescription">Book Author</string>
    <string name="titleTextViewDescription">Book Title</string>
    <string name="yearTextViewDescription">Date Published</string>
    <string name="coverImageDescription">cover image</string>
    <string name="coverimageviewDescription">coverImageView</string>
    <string name="searchEditTextHint">Enter Query Here</string>
    <string name="channelTextViewDescription">channel where this video can be found</string>
    <string name="nav_books_text">Search for Books</string>
    <string name="nav_videos_text">Search for YouTube Vids</string>

</resources>
